--- a/pom.xml
+++ b/pom.xml
@@ -8,11 +8,11 @@
 		<version>3.1.9</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>pe.com.cayetano.see.comunes</groupId>
-	<artifactId>ms-empleado</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
-	<name>ms-comunes</name>
-	<description>modulo de comunes</description>
+	<groupId>pe.com.cayetano.see</groupId>
+	<artifactId>see-empleado-service</artifactId>
+	<version>0.0.1</version>
+	<name>see-empleado-service</name>
+	<description>microservicio de empleado</description>
 	<properties>
 		<java.version>17</java.version>
 		<spring-cloud.version>2022.0.5</spring-cloud.version>
@@ -74,6 +74,24 @@
 			<groupId>com.azure.resourcemanager</groupId>
 			<artifactId>azure-resourcemanager-botservice</artifactId>
 			<version>1.0.0-beta.5</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-config-client</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-bootstrap</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
 
 	</dependencies>
